2013-09-19  Andrey Borzenkov <arvidjaar@gmail.com>

	* docs/grub.texi (Networking commands): Add documentation for
	network related commands.

2013-09-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_util_open_dm): Check major rather than the name
	to determine if device is handled by devmapper.
	(convert_system_partition_to_system_disk): Likewise.
	(get_dm_uuid): Don't check explicitly if device is mapped, it's
	already done in grub_util_open_dm.

2013-09-19  Leif Lindholm  <leif.lindholm@linaro.org>

	* kern/arm/cache.S: Correct access to ilinesz/dlinesz variables.
	Clean up stack manipulation (sync_caches_armv*)

2013-09-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/lvm.c: Remove since unused. Remove remaining references.

2013-09-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle the case of partitioned LVM properly.

	* grub-core/kern/emu/hostdisk.c (grub_util_get_dm_node_linear_info):
	Stop on meeting LVM, mpath or DMRAID.
	(grub_hostdisk_os_dev_to_grub_drive): Canonicalize os device.
	(read_device_map): Likewise.
	* util/getroot.c (convert_system_partition_to_system_disk): Assume that
	device is full disk rather than erroring out on LVM and similar cases.

2013-09-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig_lib.in: Keep supplied pkgdatadir if any.

2013-09-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mm.c (grub_mm_init_region): Skip regions less than
	4K before the end.
	Reported by: Leif Lindholm

2013-09-18  Pawel Wojtalczyk <eyak@wp.pl>
2013-09-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/efi/console.c (grub_console_getkey): Accept VT100-style
	codes.

2013-09-18  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/efi/efidisk.c (grub_efidisk_get_device_name_iter):
	Remove no-longer-true __attribute__ ((unused)) on disk parameter.

2013-09-18  Douglas Ray <dougray@cpan.org>

	* util/grub-mkpasswd-pbkdf2.c (grub_get_random): Declare OpenBSD PRNG
	as secure.
